--- a/_posts/2019-12-18-the-us-narrative-today.html
+++ b/_posts/2019-12-18-the-us-narrative-today.html
@@ -1646,107 +1646,107 @@ stories:
   domain: http://www.miamitodaynews.com/
   link: https://www.miamitodaynews.com/2019/12/17/atlantic-sapphire-building-largest-aquaculture-facility-in-world/
 images:
-- name: flower-barbed-wire-flower-barbed-wire-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-plentiful.jpg
-- name: old-granary-field-oldhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
-- name: oldhouse-granaryfield-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
-- name: copper-circuit-palace-water-fountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-palace-water-fountain.jpg
-- name: berlinwall2-berlinwall-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colorful-blocks.jpg
-- name: oldroad-old-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-light-dali.jpg
-- name: gypsymosaic-gypsy-eyes-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sand-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-free-woman.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-internet-numbers.jpg
-- name: miamibeach-miamibeach-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-wols.jpg
-- name: stalin-time-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-fence-down-the-line-2.jpg
-- name: old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
-- name: old-gas-pumps-oldgaspumps-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-- name: dc-statue-dcstatue-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-bright-sand.jpg
-- name: border-crossing-bordercrossing-crafty-painting.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crafty-painting.png
-- name: border-crossing-bordercrossing-bright-sand.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-bright-sand.png
-- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-- name: white-house-whitehouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kandinsky-bv.jpg
-- name: bordercrossing-bordercrossing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing.jpg
-- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-- name: miamibeach-miamibeach-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-pablo-blue.jpg
-- name: 35562068104_fa20c57575-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wreck.jpg
-- name: status-berlin-status-berlin-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
-- name: server-cloud-server-racks-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
-- name: mosaic-face-mosaic-face-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-brush.jpg
-- name: la-muse-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grafitti-woman-bangs.jpg
-- name: windowmountain-window-mountain-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-alberto-giacometti.jpg
-- name: legal-statue-legalstatue-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
-- name: berlinwall2-berlinwall-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-umberto-bocc.jpg
-- name: dragon-desert-desert-dragon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crafty-painting.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-- name: mediterranean-mediterranean.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crunch-paper.jpg
-- name: powerlines-power-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-mucha-mult.jpg
-- name: adam-smith-adam-smith-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-marcel-duchamp.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: hollywood-building-hollywood-building-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-wols.jpg
-- name: legal-statue-legalstatue-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-hot-spicy.jpg
-- name: sand-hand-sand-hand-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
-- name: amusement-park-amusement-park-2-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-marcel-duchamp.jpg
-- name: crow_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dry_skin.jpg
-- name: christianity-christianity-under-construction-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-space-pizza.jpg
-- name: downtown-trucksilo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-bright-sand.jpg
-- name: old-house-oldhouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-spagetti-accident.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
-- name: braceros-domingo-ulloa-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-steam-engine-iceland.jpg
-- name: christianity-christianity-under-construction-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
-- name: server-cloud-server-racks-door-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-wols.jpg
+- name: nyc-flag-nycflag-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crabapple.jpg
+- name: gypsymosaic-gypsy-eyes-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-rain.jpg
+- name: stalin-time-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-graffitti-red-hat-man.jpg
+- name: abandonedbuildings_yellow_collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_collage.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+- name: power-lines-power-lines-empty-space-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-dream.jpg
+- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
+- name: razorwire-DSC-0080-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-constitution.jpg
+- name: bf-skinner-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-barcelona-waterfront.jpg
+- name: powerlines-power-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-color.jpg
+- name: stalin-time-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-christ-cross-chalice.jpg
+- name: walled-garden-walled-garden-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-space-pizza.jpg
+- name: old-cabin-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-constitution.jpg
+- name: white-house-lawn-white-house-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crunch-paper.jpg
+- name: copper-circuit-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-turning-head.jpg
+- name: statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
+- name: christianity-christianity-under-construction-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crabapple.jpg
+- name: liberty-back-statue-liberty-back-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-storm.jpg
+- name: meadowbutterfly-meadow-butterfly-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
+- name: abandonedbuildings_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_kandinsky_bv.jpg
+- name: nazi-invasion-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-salesforce-bay-bridge.jpg
+- name: berlinwall-DSC-0084-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-mucha-mult.jpg
+- name: curtain-curtain-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-oily-mcoilface.jpg
+- name: locked-up-steam-lock-up-steam-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-kand-two.jpg
+- name: bluelake-purp-paper-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-01-17-38.jpg
+- name: dc-statue-dcstatue-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-diego-rivera1.jpg
+- name: dc-statue-dcstatue-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-dali.jpg
+- name: aws-s3-stories-status-berlin-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-propaganda-leaflets.jpg
+- name: mediterranean-mediterranean-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
+- name: bf-skinner-border-crossing-through-fence-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-border-crossing-through-fence-2.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
+- name: berlinwall-DSC-0084-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-graham-sutherland.jpg
+- name: amusement-park-amusement-park-2-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smoking-cigarette.jpg
+- name: nazi-invasion-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-please-do-not-feed-the-pigeon.jpg
+- name: rain-princess-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds.jpg
+- name: oldhouse-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: hollywood-building-hollywood-building-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-aqua.jpg
+- name: flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+- name: castle-wall-DSC-0067-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
+- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+- name: yosemite-yosemite-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-circuit.jpg
+- name: locked-up-steam-lock-up-steam-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-pablo-blue.jpg
+- name: old-gas-pumps-oldgaspumps-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colored-circuits.jpg
+- name: castle-wall-DSC-0067-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-satan-red.JPG
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: beach-clouds-lifeguard-beachclouds-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-matrix.jpg
+- name: aws-s3-stories-new-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-server-cloud1-internet-numbers.jpg
+- name: bf-skinner-cannon_36556797762_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cannon_36556797762_o.jpg
 ---
 Hear Adam Schiff's Full Remarks On Articles Of Impeachment.&nbsp;Shop With A Cop.&nbsp;RHODs LeeAnne Locken Calls Fellow Cast Member The Little Chirpy Mexican.&nbsp;Prioritize Your Health In The New Year.&nbsp;Defiant Trump Rallies Supporters As House Impeaches Him.&nbsp;Groups Working On Alternative Plans For Marlboro College.&nbsp;Great Season, Great Fans.&nbsp;Twin Metals Minnesota Files Formal Mine Plan With Regulators.&nbsp;
